# Tasks-RESTful-APIs

./: README.md  pyproject.toml
config/: settings.py  urls.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
