[tool.poetry]
name = "tasks-restful-apis"
version = "0.1.0"
description = ""
authors = ["abood-74 <abdelrahmanashour45@gmail.com>"]
readme = "README.md"
packages = [{include = "tasks_restful_apis"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
